# merge_csv_files

./: .gitignore  README.md  pyproject.toml
merge_csv_files/: main.py
